deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  selector:
    app: whoami
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
