deploy/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: whoami
spec:
  podSelector:
    matchLabels:
      app: whoami
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: http
          protocol: TCP
